<resources>
    <string name="app_name">FlowPractice</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_flow">SharedFlow</string>
    <string name="stateflow">StateFlow</string>
    <string name="flow_and_retrofit">Flow And Retrofit</string>
    <string name="flow_and_room">Flow And Room</string>
    <string name="flow_and_download">Flow And Download</string>
</resources>