<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical">

   <Button
       android:id="@+id/btn_flow_and_download"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/flow_and_download"
       android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_flow_and_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flow_and_room"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_flow_and_retrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flow_and_retrofit"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_state_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stateflow"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_shared_flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shared_flow"
        android:layout_marginTop="10dp"/>

</LinearLayout>